--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 header{
-    background-color: #323031;
+    background-color: #0A0A0A;
     width: 100%;
     max-height: 20vh;
     display: flex;
@@ -17,7 +17,7 @@ header{
 }
 
 header a{
-    color: #7F00FF;
+    color: #F6AE2D;
 }
 
 header .Topo{
@@ -52,15 +52,15 @@ header .Direita{
 #Cadastre{
     margin-right: 15px;
     padding: 15px;
-    background-color: #7F00FF;
-    color: #323031;
+    background-color: #F6AE2D;
+    color: #0A0A0A;
     font-size: 15px;
 
 }
 
 header .LinksPrincipais{
     font-weight: bolder;
-    color: #7F00FF;
+    color: #F6AE2D;
     margin-right: 15px;
 }
 
@@ -93,11 +93,11 @@ header .rightBar{
 .iconeLupa{
     height: 15px;
     margin-right: 5px;
-    color: #7F00FF;
+    color: #DD962C;
 }
 
 #formBusca{
-    border: 1px solid #7B889E;
+    border: 1px solid #4E586A;
     border-radius: 5px;
     height: 25px;
     width: 100%;
@@ -108,7 +108,7 @@ header .rightBar{
 
 
 body{
-    background-color: #F6D7CB;
+    background-color: #f5f5f5;
 }
 
 body .Container{
@@ -121,7 +121,7 @@ body .Main{
     width: 800px;
     height: 300px;
     border: 3px solid;
-    background-color: #7B889E;
+    background-color: #4e586a;
     align-self: center;
     text-align: center;
     margin-top: 30px;
@@ -137,18 +137,18 @@ body .Mid{
 
 h3{
     margin-bottom: 10px;
-    color: #F53100;   
+    color: #dd962c;   
 }
 
 body .blobMid1{
-    background-color: #7b889ec0;
+    background-color: #4E586A;
     border: 1px #323031 solid;
     padding: 20px 90px;
     text-align: left;
 }
 
 body .blobMid2{
-    background-color: #7b889ec0;
+    background-color: #4E586A;
     border: 1px #323031 solid;
     padding: 20px 90px;
     display: flex;
@@ -167,20 +167,20 @@ body .blobMid2{
 }
 
 #envelope{
-    color: #F53100;
+    color: #DD962C;
     size: 50px;
     margin-left: 15px;
     
 }
 
 body .blobMid3{
-    background-color: #7b889ec0;
+    background-color: #4E586A;
     border: 1px #323031 solid;
     padding: 20px 90px;
 }
 
 body .Bottom{
-    background-color: #7b889ec0;
+    background-color: #4E586A;
     border: 1px #323031 solid;
     padding: 20px 90px;
     display: flex;
@@ -193,26 +193,35 @@ body .Bottom{
 }
 
 h4{
-    color:#323031;
+    color:#0A0A0A;
     size: 50px;
     margin-right: 15px; 
 }
 
 #envelopeindique{
-    color:#323031;
+    color: #0a0a0a;
     size: 50px;
     margin-left: 15px;
     
 }
 
 footer{
-    background-color: #323031;
+    background-color: #0a0a0a;
     width: 100%;
+
+    position: fixed;
+    bottom: 0px; 
+    width: 100%; 
+    height: 40px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 footer .institucionais{
-    height: 5vh;
-    background-color: #323031;
+ 
+    background-color: #0A0A0A;
     display: flex;
     align-items: center;
 }
@@ -223,6 +232,12 @@ footer .rodape{
 }
 
 footer a{
-    color: #7F00FF;
+    color: #F6AE2D;
     font-weight: bolder;
+}
+
+footer .redes{
+    color:#dd962c;
+    align-content: center;
+    margin-right: 20px;
 }
