--- a/responsive.css
+++ b/responsive.css
@@ -16,6 +16,10 @@
         
     }
 
+    .dropdown:hover .dropdown-content {
+        background-color: #4e586ae5;
+      }
+
     header img{
         margin-bottom: 30px;
     }
