--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ header a{
     color: #F6AE2D;
 }
 
+header a:hover{
+    color:#DD962C;
+}
+
 header .Topo{
     margin-top: 10px;
     display: flex;
@@ -45,7 +49,6 @@ header .TopoDireita{
     flex-direction: row;
     font-weight: normal;
     align-items: center;
-    color: #7F00FF;
     
 }
 
@@ -62,14 +65,74 @@ header .Direita{
     background-color: #F6AE2D;
     color: #0A0A0A;
     font-size: 15px;
+}
 
+#Cadastre:hover{
+    background-color: #4e586a;
+    color: #F6AE2D;
+    padding: 14px;
+    border: solid 1px #DD962C;
 }
 
 header .LinksPrincipais{
     font-weight: bolder;
-    color: #F6AE2D;
     margin-right: 15px;
 }
+
+
+.dropbtn {
+    font-size: 15px;
+    border: 1px solid #F6AE2D;
+    border-radius: 5px;
+    padding: 2px;
+    background-color: #0A0A0A;
+    width: 100px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    font-size: 13px;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #4E586A;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    padding: 5px;
+    padding-top: 20px;
+  }
+
+  .dropdown-content a{
+    color: #0A0A0A;
+    
+}
+  .dropdown-content a:hover {
+    background-color: #f5f5f5;
+    color: #DD962C;
+    width: 100%;
+}
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+    background-color: #4e586a86;
+    color: #0A0A0A;
+    width: 100%;
+    line-height: 20px;
+}
+
+  .dropdown:hover .dropbtn {
+    background-color: #dd962c;
+
+}
+
+.dropbtn a:hover{
+    color: #f5f5f5;
+}
+
 
 
 header .Barra{
@@ -264,8 +327,16 @@ footer a{
     font-weight: bolder;
 }
 
+footer a:hover{
+    color:#DD962C;
+}
+
 footer .redes{
     color:#F6AE2D;
     align-content: center;
     margin-right: 20px;
+}
+
+footer .redes i:hover{
+    color:#DD962C
 }
