ajuste de css no menu dropdown Categorias

--- a/style.css
+++ b/style.css
@@ -81,12 +81,10 @@ header .LinksPrincipais{
 
 
 .dropbtn {
-    font-size: 15px;
-    border: 1px solid #F6AE2D;
-    border-radius: 5px;
-    padding: 2px;
     background-color: #0A0A0A;
-    width: 100px;
+    width: auto;
+    font-size: 15px;
+    font-weight: bolder;
 }
 
 .dropdown {
