--- a/styleCadastrar.css
+++ b/styleCadastrar.css
@@ -264,7 +264,6 @@ body .blobMid2{
 body .blobMid3{
     border: 1px #4e586a solid;
     padding: 20px 90px;
-
     -webkit-box-shadow: 0px 0px 30px 0px #4e586aa6;
     -moz-box-shadow:    0px 0px 30px 0px #4e586aa6;
     box-shadow:         0px 0px 30px 0px #4e586aa6;
@@ -297,8 +296,8 @@ h4{
 footer{
     background-color: #0a0a0a;
     width: 100%;
-    width: 100%; 
-    height: 40px;
+    flex-wrap: wrap;
+    min-height: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -337,11 +336,26 @@ footer .redes i:hover{
 
 main{
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #0A0A0A;
+}
+#loginBtn{
+    color: #0A0A0A;
+}
+
+.iconesLogin{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 #btnLogin{
-    width: 100px;
+    width: 150px;
     height: 50px;
     border: 1px solid #0a0a0a ;
 }
@@ -349,11 +363,38 @@ main{
 #btnLogin:hover{
     border: 2px solid #0a0a0a ;
 }
+#cadastrar{
+    width: 150px;
+    min-height: 50px;
+    border: 1px solid #0a0a0a ;
+    margin-bottom: 15px;
+    color: white;
+    background: #0A0A0A;
+}
 .containerInput{
     width: 400px;
+    min-height: 150px;
+    justify-content: space-around;
 
 }
 .containerInput input{
     width: 100%;
+    height: 40px;
     border: 1px solid #0A0A0A;
+    margin-bottom: 20px;
+}
+.btnCadastra{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+#teste{
+    border: 1px solid #0A0A0A;
+    min-width: 500px;
+    min-height: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
