--- a/categories.css
+++ b/categories.css
@@ -17,6 +17,7 @@ body{
     width: 100%;
     align-items: center;
     justify-content: center;
+    
 }
 
 .main{
@@ -30,6 +31,7 @@ body{
 .pageTitle{
     padding: 15px;
     margin: 5px;
+    margin-bottom: 30px;
     font-weight: bolder;
     color: #0a0a0a;
     font-size: 25px;
@@ -40,8 +42,7 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    flex-wrap: wrap;
-    max-width: 100vh;
+    flex-wrap:wrap;
 }
 .catItem{
     display: flex;
@@ -53,11 +54,31 @@ body{
     width: 120px;
 
     padding: 4px;
-    margin: 2px;
+    margin: 5px;
+    
+    -webkit-box-shadow: 0px 0px 30px 0px #4e586a65;
+    -moz-box-shadow:    0px 0px 30px 0px #4e586a65;
+    box-shadow:         0px 0px 30px 0px #4e586a65;
+}
 
-    border: solid;
+.catItem:hover{
+    color: #DD962C;
+}
+
+.catItem:active{
+    background-color: #DD962C;
+    color: #0a0a0a;
+    transform: translateY(4px);
 }
 
 .catItem i{
     margin-bottom: 10px;
+}
+
+@media screen and (max-width: 930px) {
+    .categoriesGrid{
+        justify-content: center;
+        margin-bottom: 70px;
+
+    }
 }
