--- a/headerAndFooter.css
+++ b/headerAndFooter.css
@@ -225,6 +225,7 @@ footer .redes i:hover{
         display: flex;
         flex-direction: column;
         height: auto;
+        min-width: 100%;
         margin-bottom: 5px;
         max-height: 50vh;
     }
@@ -234,7 +235,6 @@ footer .redes i:hover{
         flex-direction: column;
         align-items:center;
         margin-bottom: 15px;
-        
     }
 
     .dropdown:hover .dropdown-content {
@@ -243,6 +243,8 @@ footer .redes i:hover{
 
     header img{
         margin-bottom: 30px;
+        max-width: 250px;
+        height: auto;
     }
 
     header .TopoDireita{
@@ -267,5 +269,27 @@ footer .redes i:hover{
     
     header .rightBar{
         display: flex;
+    }
+
+    footer{
+        flex-wrap: wrap;
+        height: auto;
+        min-height: 40px;
+        position: relative;
+    }
+
+}
+
+@media screen and (max-width: 690px) {
+    footer{
+        flex-direction: column;
+        padding-bottom: 10px;
+        justify-content: center;
+    }
+    .institucionais{
+        padding: 5px;
+    }
+    .redes{
+        padding: 5px;
     }
 }
