--- a/search.css
+++ b/search.css
@@ -35,7 +35,8 @@ body .searchMain{
     box-shadow:         0px 0px 30px 0px #4e586a65;
 }
 
-.searchImg img{
+
+.searchMain img{
     height: auto;
     width: 400px;
     
@@ -186,6 +187,7 @@ body .searchMain{
 
 nav{
     width: 100%;
+    height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -203,4 +205,43 @@ nav i:hover{
 nav p{
     font-size: 13px;
     color: #4E586A;
+}
+
+@media screen and (max-width: 930px) {
+ 
+body .Container{
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.Container .searchMain{
+    width: auto;
+    max-width: 300px;
+}
+
+.searchMain img{
+    width: 100%;
+}
+
+.searchTool{
+    width: auto;
+}
+
+.searchTool .textSearch{
+    width: auto;
+}
+.resultsBar{
+    width: auto;
+}
+
+.resultsItems{
+    width: auto;
+}
+
+footer{
+    position: relative;
+}
 }
