--- a/dashboard.css
+++ b/dashboard.css
@@ -10,6 +10,30 @@ body{
     background-color: #f5f5f5;
 }
 
+.mainMenu{
+    margin-top: 10px;
+    margin-left: 10px;
+    border: solid #0a0a0a 2px;
+    height: 50px;
+    width: 50px;
+    border-radius:50%;
+    position: absolute;
+    color: #0a0a0a;
+    background-color: #DD962C;
+}
+
+.mainMenu:hover{
+    border: solid #4e586a 2px;
+    background-color: #0A0A0A;
+    color: #F6AE2D;
+}
+
+.mainMenu:active{
+    background-color: #DD962C;
+    color: #0a0a0a;
+    transform: translateY(4px);
+}
+
 body .main{
     display: flex;
     min-width: 100vw;
@@ -134,3 +158,81 @@ a:hover{
     padding: 10px;
 }
 
+@media screen and (max-width: 930px) {
+    .main{
+        max-width: 100vw;
+        margin-bottom: 10px;
+       
+    }
+
+    .halfTop{
+        height: auto;
+        width: auto;
+        flex-direction: column;
+    }
+
+    .halfTop button{
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .halfTopLeft{
+        height: auto;
+    }
+
+    .drafSummary{
+        align-items: center;
+    }
+
+    .halfTopRight{
+        display: flex;
+        justify-content: center;
+        height: 172px;
+        width: 200px;
+        margin-top: 20px;
+    }
+    .halfTopRight img{
+        max-width: 172px;
+        height: 172px;
+        
+    }
+
+    .draftsContent{
+        width: 200px;
+        height: fit-content;
+        flex-wrap: wrap;
+    }
+
+    .halfBottom{
+        height: auto;
+        width: 100vw;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0px;
+        margin-top: 20px;
+    }
+
+    .viewsContent{
+        width: 200px;
+        height: fit-content;
+    }
+
+    .sharingContent{
+        width: 200px;
+        height: fit-content;
+    }
+
+    .halfBottomRight{
+        margin-top: 15px;
+        height: auto;
+        width: 200px;
+    }
+    
+    .halfBottomLeft{
+        height: auto;
+        width: 200px;
+    }
+
+
+}
