css ajustment on about page for social links hover and footer links updates

--- a/about.css
+++ b/about.css
@@ -89,6 +89,13 @@ body{
     align-self: flex-end;
 }
 
+.aboutUsSocial a{
+    color: #0a0a0a;
+}
+.aboutUsSocial a:hover{
+    color: #DD962C;
+}
+
 @media screen and (max-width: 930px) {
     .aboutUsGrid{
         flex-direction: column;
