--- a/styleLogin.css
+++ b/styleLogin.css
@@ -329,7 +329,14 @@ main{
     justify-content: center;
     border: 1px solid #0A0A0A;
 }
-
+.titulosLogin{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+}
 #container{
     border: 1px solid #0A0A0A;
     min-width: 500px;
@@ -341,11 +348,29 @@ main{
 .containerInput{
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
 }
-#btnCadastrar{
+.containerInput > input{
+    width: 100%;
+    min-height: 40px;
+}
+
+#btnLogin{
     border: 1px solid #0A0A0A;
+    min-width: 120px;
+    min-height: 50px;
+    color: #F6AE2D;
+    background: #0A0A0A;
+}
+#btnIcon{
     min-width: 80px;
     min-height: 50px;
+    color: #0a0a0a;
+    background: #f5f5f5;
+}
+#btnCadastrar:hover{
+    background: #303030;
 }
 .boxBtnCenter{
     display: flex;
@@ -353,7 +378,24 @@ main{
    justify-content: center;
    align-items: center;
 }
+.login{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 80%;
+    height: 200px;
+}
+.boxBtnCenter{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    min-height: 150px;
+    width: 100%;
+}
+#esqueceuSenha{
+margin-top: 1px ;
+}
 hr{
-    border: 1px solid #0A0A0A;
+    border: 0.5px solid #0A0A0A;
     width: 90%;
 }
