--- a/SOF/public/stylesheets/style.css
+++ b/SOF/public/stylesheets/style.css
@@ -322,20 +322,32 @@ body .blobMid2{
 }
 
 .formSignUp{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   border: 2px solid #4E586A;
   border-radius: 5px;
-  height: 30px;
-  width: 100%;
+  height: 50px;
+  width: 220px;
   
   background-color: #f5f5f5;
   align-items: center;
 }
 
-#envelope{
-  color: #DD962C;
-  size: 50px;
-  margin-left: 15px;
-  
+.formSignUp input{
+  font-size: 13px;
+  line-height: 20px;
+  border: solid 2px #f5f5f5;
+}
+
+
+.mailMid button{
+  size: 60px;
+  color: #0A0A0A;
+}
+
+.mailMid button:hover{
+  color: #F6AE2D;
 }
 
 body .blobMid3{
@@ -366,12 +378,78 @@ h4{
   margin-right: 15px; 
 }
 
-#envelopeindique{
-  color: #0a0a0a;
-  size: 50px;
-  margin-left: 15px;
-  
+
+.form-indique{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 220px;
+  align-items: center;
 }
+
+.form-indique input{
+  font-size: 13px;
+  border: solid 2px;
+}
+
+.indiqueBttn{
+  width: 35px;
+  color: #0A0A0A;
+  background-color: transparent;
+}
+
+.indiqueBttn:hover{
+  color: #F6AE2D;
+  background-color: #4E586A;
+}
+
+.modal-ind{
+  display: none;
+  height: 380px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.indForm{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 100%;
+  border: solid 2px #4e586a65;
+  padding: 10px;
+}
+
+.indForm input{
+  border: solid 2px #f5f5f5;
+}
+
+
+.closeInd{
+  align-self: flex-end;
+  background-color: #f5f5f5;
+  width: 20px;
+  height: 20px;
+  align-content: center;
+}
+
+.sendInd{
+  width: 100%;
+  align-self: flex-end;
+  border: 1px solid #0a0a0a;
+  background-color: #f6ae2d;
+}
+
+.sendInd:hover{
+  background-color: #DD962C;
+}
+
+
+
 
 @media screen and (max-width: 930px) {
     
@@ -2246,7 +2324,7 @@ footer{
   width: 100%;
   bottom: 0px;  
   height: 40px;
-
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
