--- a/SOF/views/partials/header.ejs
+++ b/SOF/views/partials/header.ejs
@@ -24,18 +24,16 @@
             <a href="/search">Busca</a>
         </nav>
         <section class="main-logo">
-                <img src="/images/primarylogo_border.png" alt="Logo Principal">
+            <img src="/images/primarylogo_border.png" alt="Logo Principal">
         </section>
         <section class="alternative-logo">
             <img class="logoIcon" src="/images/icon.png" alt="Logo Alternativo">
         </section>
-        
+
         <section class="UserBlock">
-            
-                <a href="/login">Fazer Login</a>
-                <button>Cadastre-se</button>
-           
+
+            <a href="/login">Fazer Login</a>
+            <a class="signUpBttn" href="/signUp">Cadastre-se</a>
+
         </section>
     </header>
-
-    
