coletando informações de cadastro

--- a/SOF/views/signUp.ejs
+++ b/SOF/views/signUp.ejs
@@ -5,7 +5,7 @@
         <div class="mainBox">
             <h2>Cadastre-se!</h2>
             <div class="signUpBox">
-                <form action="" method="post">
+                <form action="/signUp" method="POST">
                     <label for="fullName">Nome Completo</label>
                     <input name="fullName" type="text" placeholder="digite seu nome">
                     <br>
