--- a/SOF/views/login.ejs
+++ b/SOF/views/login.ejs
@@ -6,11 +6,11 @@
             <h1>
                 <%= title %>
             </h1>
-            <form action="/dashboard" method="POST">
-                <label for="username" name="username" id="username">Usuário/Email</label>
-                <input type="text" name="username" id="username"><br>
-                <label for="password" name="username" id="password">Senha</label>
-                <input type="password" name="password"id="password"><br>
+            <form action="/login" method="POST">
+                <label for="email" name="email" id="email">Email</label>
+                <input type="text" name="email" id="username"><br>
+                <label for="password" name="password" id="password">Senha</label>
+                <input type="password" name="password" id="password"><br>
                 <button class="loginBtn" method="POST">Login</button><br>
             </form>
             <br>
