--- a/SOF/views/login.ejs
+++ b/SOF/views/login.ejs
@@ -7,11 +7,22 @@
                 <%= title %>
             </h1>
             <form action="/login" method="POST">
-                <label for="email" name="email" id="email">Email</label>
-                <input type="text" name="email" id="username"><br>
-                <label for="password" name="password" id="password">Senha</label>
-                <input type="password" name="password" id="password"><br>
-                <button class="loginBtn" method="POST">Login</button><br>
+                <% if(typeof(errors) !="undefined" ) { %>
+                    <div class="error">
+                        <ul>
+                            <% errors.forEach((error)=>{ %>
+                                <li>
+                                    <%= error.msg %>
+                                </li>
+                                <% }) %>
+                        </ul>
+                    </div>
+                    <% } %>
+                        <label for="email" name="email" id="email">Email</label>
+                        <input type="text" name="email" id="username"><br>
+                        <label for="password" name="password" id="password">Senha</label>
+                        <input type="password" name="password" id="password"><br>
+                        <button class="loginBtn" method="POST">Login</button><br>
             </form>
             <br>
             <span>ou</span>
