--- a/SOF/views/dashboard.ejs
+++ b/SOF/views/dashboard.ejs
@@ -10,7 +10,9 @@
                 <div class="halfTopLeft">
                     <p class="textP">Bem vindo(a) de volta, <%= user.name %>
                     </p>
-                    <button class="newThread"><i class="far fa-plus-square"></i> Adicione um novo Fio</button>
+                    <a class="newThread" href="newthread"><i class="far fa-plus-square"></i>
+                        Adicione um novo
+                        Fio</a>
                     <div class="draftsSummary">
                         <ul class="titleUl">Finalize seus rascunhos</ul>
                         <div class="draftsContent">
