--- a/SOF/views/partials/headerlogin.ejs
+++ b/SOF/views/partials/headerlogin.ejs
@@ -46,7 +46,7 @@
                         <li><a href="/profileview">Visualizar meu Perfil</a></li>
                         <li><a href="/accountmgmt">Editar minha Conta</a></li>
                         <br>
-                        <li class="logoutMenu"><a href="/login">Sair</a></li>
+                        <li class="logoutMenu"><a href="/logout">Sair</a></li>
                     </div>
                 </div>
             </div>
