--- a/SOF/public/stylesheets/style.css
+++ b/SOF/public/stylesheets/style.css
@@ -129,7 +129,7 @@ header .TopoDireita{
   border-radius: 50px;
   background-color: #0a0a0a;
   margin: 5px;
-  background-image: url(./img/profile3.jpg);
+  /* background-image: url(./img/profile3.jpg); */
   background-position: center;
   background-size:cover;
 }
